--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^4.2.95",
     "core-js": "^2.6.5",
     "mavon-editor": "^2.7.5",
     "vue": "^2.6.10",
